--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.0"
+    "redux-thunk": "^2.4.0",
+    "sass": "^1.43.4"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
